--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,11 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven {
+            url "https://dl.bintray.com/cloudminds/CloudMindsAPIs"
+        }
+
     }
 }
 
